<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        app:showAsAction="always"
        android:title="@string/txt_home"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom"
        android:title="@string/txt_search"/>
    <item
        android:id="@+id/action_download"
        android:icon="@drawable/download"
        app:showAsAction="ifRoom"
        android:title="@string/txt_your_show"/>
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/profile"
        app:showAsAction="ifRoom"
        android:title="@string/txt_profile"/>
</menu>