<?xml version="1.0" encoding="utf-8"?>
<com.padcmyanmar.androidftc.padcx_podcastassignment_nct.views.viewpods.EmptyViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_layout">
    <ImageView
        android:id="@+id/ivWelcome"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:src="@drawable/placeholder"/>
    <TextView
        android:id="@+id/tvWelcome"
        android:text="@string/txt_welcome"
        android:layout_below="@id/ivWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_large"
        android:textSize="@dimen/text_heading_2x"
        android:textStyle="bold"
        android:textColor="@color/textColorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvWelcomeDesc"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_welcome_desc"
        android:layout_below="@id/tvWelcome"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="@dimen/text_regular_3x"
        android:textColor="@color/textColorPrimary"
        android:layout_marginTop="@dimen/margin_medium"/>
    <Button
        android:id="@+id/btnFindNew"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/tvWelcomeDesc"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/progressBarColor"
        android:text="@string/txt_find_new"
        android:textSize="@dimen/text_regular_3x"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_xlarge"/>
    <Button
        android:id="@+id/btnReload"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/btnFindNew"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/yellowLight"
        android:text="@string/txt_reload"
        android:textSize="@dimen/text_regular_3x"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium"/>
    <ImageView
        android:id="@+id/ivMore"
        android:src="@drawable/ic_more_horiz_black_24dp"
        android:layout_below="@id/btnReload"
        android:layout_centerHorizontal="true"
        android:scaleType="centerCrop"
        android:layout_width="80dp"
        android:layout_height="80dp"/>
</com.padcmyanmar.androidftc.padcx_podcastassignment_nct.views.viewpods.EmptyViewPod>